--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -3,10 +3,8 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-6">
-          <h2>Blockchain Infrastructure</h2>
-          <p>
-            The OpenST Infrastructure enables scalable token economies. OST leads development on the OpenSt Protocol, a framework for building highly scalable blockchain toekn econimies and also OpenST Mosaic, a layer-2 scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at signifiacntly lower gas prices. All OpenST releases are provided via open source license for anyone to use and to build and improve on.
-          </p>
+          <h2>Scalable Technology</h2>
+          <p>OST is designed for Internet-grade transaction volumes and speeds. OST leads development of the OpenST Protocol for launching Branded Token economies for mainstream businesses, and OpenST Mosiac a scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at low cost.</p>
           <div class="my-4">
             <a href="https://github.com/OpenSTFoundation" class="btn btn-primary my-2 my-md-3" title="GITHUB FOUNDATION">GITHUB FOUNDATION</a>
             <a href="" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="OPEN ST FORUM">OPEN ST FORUM</a>
@@ -31,9 +29,9 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-open-st-logo"></use>
                   </switch>
                 </svg>
-                <h5>OPEN ST</h5>
+                <h5>BRANDED TOKENS</h5>
               </div>
-              <p>The OpenST protocol enables the creation of utility tokens on a utility blockchain while the value of those tokens is backed by staked crypto-assets on a value blockchain The OpenST Protocol establishes a bridge between the Ethereum value blockchain and a number of utility blockchains. </p>
+              <p>The OpenST protocol enables the creation of Branded Tokens as stored value on auxilliary blockchains while the value of those tokens is backed by staked cryptoassets on Ethereum.</p>
             </div>
             <div>
               <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link">
@@ -64,9 +62,9 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-mosaic-logo"></use>
                   </switch>
                 </svg>
-                <h5>MOSAIC</h5>
+                <h5>THOUSANDS OF TX PER SECOND</h5>
               </div>
-              <p style="flex: 1 1 auto;">OpenST Mosaic is an overlay-consensus engine that adds transaction throughput capacity to Ethereum by leveraging Proof-of-Work to secure a large number of utility blockchains. OpenST Mosaic introduces 2nd-layer consensus rules for open validators that provide economic finality for the transactions executed on OpenST utility chains. </p>
+              <p style="flex: 1 1 auto;">OpenST Mosaic introduces metablockchains to enable Internet-grade transaction throughput on Ethereum. Your transactions run at lightning speed on auxilliary blockchains with economic finality secured asynchronously on Ethereum.</p>
             </div>
             <div>
               <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link">
