--- a/app/views/web/ost/index/_liquidity_token_exchange.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange.erb
@@ -11,8 +11,8 @@
            />
        </div>
        <div class="col-md-6 my-auto text-content">
-         <h3 class="white-header">Liquidity Branded Token Exchange  </h3>
-         <p class="mt-4">OST Branded Token Exchange "BTEX" will facilitate easy exchange of BT for other currencies. For providing fast liquidity OST will will serve as the market maker intially with other market makers joining in time.</p>
+         <h3 class="white-header">Liquidity Branded Token Exchange</h3>
+         <p class="mt-4">OST's Branded Token Exchange, BTEX, will let your customers swap the Branded Tokens you create for other forms of value. OST is currently securing licenses worldwide for BTEX.</p>
          <button class="btn btn-primary mt-3" title="Read More">Read More</button>
        </div>
      </div>
