--- a/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
@@ -3,10 +3,8 @@
     <div class="container">
       <div class="row text-content py-5 ">
         <div class="col-12">
-          <h3 class="white-header">Liquidity Branded Token Exchange  </h3>
-          <p class="mt-4 pr-3">
-            OST Branded Token Exchange “BTEX” will facilitate easy exchange of BT for other currencies. For providing fast liquidity OST will will serve as the market maker intially with other market makers joining in time.
-          </p>
+          <h3 class="white-header">Liquidity Branded Token Exchange</h3>
+          <p class="mt-4 pr-3">OST's Branded Token Exchange, BTEX, will let your customers swap the Branded Tokens you create for other forms of value. OST is currently securing licenses worldwide for BTEX.</p>
         </div>
         <div class="col-12 img-container container ">
           <div class="row">
