--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -1,13 +1,14 @@
 <section class="container-fluid container-powered position-relative ost pt-5">
   <div class="row align-items-center">
     <div class="col col-lg-5 col-xl-4 ml-xl-auto mr-xl-6 pl-xl-1 mx-auto">
-      <svg class="svg ost-kit-logo mb-4">
-        <switch>
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>
-        </switch>
-      </svg>
+<!--      <svg class="svg ost-kit-logo mb-4">-->
+<!--        <switch>-->
+<!--          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>-->
+<!--        </switch>-->
+<!--      </svg>-->
+      <h3>TOOLKITS & APIs</h3>
       <p>
-        OpenST & OST KIT provides you all the tools needed to run your blockchain-powered economy on open scalable sidechains.  Use our Robust RESTful APIs to integrate advanced blockchain functionality with ease while observing the highest security standards. Or, use SDKs to get started even faster. Our user firendly dashboards will help you manage your OpenST Branded Token economies with ease.
+        OST KIT provides all the tools needed to run your blockchain-powered economy. Use our robust RESTful APIs and SDKs to integrate advanced blockchain functionality with ease while observing the highest security standards. Our user firendly dashboards help you manage and optimize your Branded Token economies.
       </p>
       <div class="mt-4 text-center text-md-left">
         <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary" title="Discover Ost Kit">Discover Ost Kit</a>
@@ -29,12 +30,15 @@
         <div class="col-sm-12 col-md-4 d-flex my-3 my-md-5">
           <div class="container-1 rounded p-4 d-flex flex-column">
             <div style="flex: 1 1 auto">
-              <svg class="d-block" width="110" height="28">
-                <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-api-sdk-logo"></use>
-                </switch>
-              </svg>
-              <p class="my-2">OST KIT gives you all the tools you need to run your blockchain-powered economy on open scalable sidechains. No need to go through an ICO: Launch your own Branded Token within minutes.</p>
+              <div class="align-items-center d-flex">
+                <svg width="32" height="28">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-api-sdk-logo"></use>
+                  </switch>
+                </svg>
+                <h5 class="d-inline-block ml-1 mb-0">APIs & SDKs</h5>
+              </div>
+              <p class="my-2">OST KIT provdes RESTful APIs and SDKs to help you easily setup and integrate your token economy into your existing app, enabling you to test with minimal effort from your developers.</p>
             </div>
             <div>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" class="text-link" target="_blank" title="Read More">Read More</a>
@@ -44,12 +48,15 @@
         <div class="col-sm-12 col-md-4 d-flex my-3 my-md-5">
           <div class="container-1 rounded p-4 d-flex flex-column">
             <div style="flex: 1 1 auto">
-              <svg class="d-block" width="110" height="28">
-                <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-guides-logo"></use>
-                </switch>
-              </svg>
-              <p class="my-2">View and analyze transactions across the OpenST side blockchains. Get a macro view of the entire OpenST ecosystem. Zoom in to view transactions within a particular OST powered digitial community.</p>
+              <div class="align-items-center d-flex">
+                <svg width="36" height="28">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-guides-logo"></use>
+                  </switch>
+                </svg>
+                <h5 class="d-inline-block ml-1 mb-0">DEV RESOURCES</h5>
+              </div>
+              <p class="my-2">OST makes it easy to design and test your blockchain-enabled app with documentation and sample code for Ruby, JavaScript, PHP, and Java. Framework code for OST Wallet and third-party payment processors streamlines the process for developers.</p>
             </div>
             <div>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" class="text-link" target="_blank" title="Read More">Read More</a>
@@ -64,7 +71,7 @@
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-kyc-brand-nav-menu"></use>
                 </switch>
               </svg>
-              <p class="my-2">OST KYC is the first plug-and-play KYC/AML management solution for token sales. Process thousands of applicants smoothly and securely. Developed for the Simple Token "OST" ICO. Now available for any company to use.</p>
+              <p class="my-2">OST KYC as a service ensures that you are compliant with know your customer regulations.</p>
             </div>
             <div>
               <a href="<%= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" class="text-link" title="Read More">Read More</a>
