--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -3,8 +3,8 @@
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
       <div class="row">
         <div class="col-12 d-block d-lg-none text-center">
-          <h2 class="header-blue-900">OST Partners</h2>
-          <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
+          <h2 class="header-blue-900">OST PARTNERS</h2>
+          <p>Billions of in-app transactions connecting<br/> hundreds of millions of users</p>
           <div class="play-video" id="partner-video-mobile">
             <div class="video-image">
               <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png 1000w" class="img-fluid" alt="OST - Design Your Token" title="" />
@@ -19,12 +19,12 @@
             <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="https://www.youtube.com/embed/OlPu9ezzPzQ?enablejsapi=1&version=3&rel=0&autoplay=1" hidden>
             </div>
           </div>
-          <p class="mt-3 text-center">The LGBT Foundation will be launching the LGBT Token to empower &amp; connect LGBT+ people all over the world.Watch their POC</p>
+          <p class="mt-3 text-center">OST development partners reach more than 300 million end users.</p>
         </div>
         <div class="col-md-12 col-lg-6 text-center text-lg-left">
           <div class="d-none d-lg-block">
-            <h2 class="header-blue-900">OST Partners</h2>
-            <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
+            <h2 class="header-blue-900">OST PARTNERS</h2>
+            <p>Billions of in-app transactions connecting<br/> hundreds of millions of users</p>
           </div>
           <div class="row partners-companies mt-3">
             <div class="col-6 col-md-4 col-xl-3 my-3">
@@ -53,7 +53,7 @@
             </div>
           </div>
           <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST Partners">MEET OST PARTNERS</a>
-          <a href="" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3" title="Discover POCS">DISCOVER POCS</a>
+          <a href="" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3" title="VIEW INTEGRATIONS">VIEW INTEGRATIONS</a>
         </div>
         <div class="col-12 col-md-6 col-lg-6 d-none d-lg-block mt-3">
           <div class="play-video" id="partner-video">
@@ -70,7 +70,7 @@
             <div class="embed-responsive embed-responsive-16by9 video-iframe" data-src="https://www.youtube.com/embed/OlPu9ezzPzQ?enablejsapi=1&version=3&rel=0&autoplay=1" hidden>
             </div>
           </div>
-          <p class="mt-3 text-center">The LGBT Foundation will be launching the LGBT Token to empower &amp; connect LGBT+ people all over the world.Watch their POC</p>
+          <p class="mt-3 text-center">OST development partners reach more than 300 million end users.</p>
         </div>
       </div>
     </div>
