--- a/app/views/web/ost/events_news/_events.erb
+++ b/app/views/web/ost/events_news/_events.erb
@@ -23,19 +23,17 @@
         # To be removed- used only for testing
         events = [{"event_name"=>"OST LIVE", "event_desc"=>"Guest: Ben Chan", "event_icon"=>"events-podcast-icon", "event_date"=>"1540944000", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST LIVE", "event_desc"=>"Guest: Trent McConaghy", "event_icon"=>"events-podcast-icon", "event_date"=>"1539734400", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST LIVE", "event_desc"=>"Project Update", "event_icon"=>"events-podcast-icon", "event_date"=>"1538697600", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST LIVE", "event_desc"=>"Guest: Keld van Schreven", "event_icon"=>"events-podcast-icon", "event_date"=>"1538524800", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST LIVE", "event_desc"=>"Guest: Sean Au", "event_icon"=>"events-podcast-icon", "event_date"=>"1538092800", "event_link"=>"https://www.youtube.com/ostdotcom"}, {"event_name"=>"OST at Web3 Summit", "event_desc"=>"Berlin", "event_icon"=>"events-event-icon", "event_date"=>"1540166400", "event_link"=>"https://web3summit.com/"}, {"event_name"=>"OST at Fellowship of Ethereum Magicians", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1540684800", "event_link"=>"https://www.picatic.com/ethmagicians-prague-2018"},{"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"},{"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1543751498", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1542973898", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1542973898", "event_link"=>"https://devcon4.ethereum.org/"}, {"event_name"=>"OST at DevCon 4", "event_desc"=>"Prague", "event_icon"=>"events-event-icon", "event_date"=>"1540857600", "event_link"=>"https://devcon4.ethereum.org/"}]
         ost_event_filtered = []
-        startIndex = 0
         events.sort_by! { |k| k["event_date"] }
         events.each_with_index do |item, index |
           if Time.at(item["event_date"].to_i).to_datetime.month == (Time.now.month)
               ost_event_filtered.push(item)
-              startIndex = index
           end
         end
         if events.present?
       %>
         <div class="col-md-7">
           <div class="static-events">
-            <% ost_event_filtered[0..5].each_with_index do |item,index|%>
+            <% ost_event_filtered.each_with_index do |item,index|%>
               <% date = Time.at(item['event_date'].to_i).utc %>
 
               <div class="outer-wrapper">
@@ -108,9 +106,6 @@ location=<%=item['event_desc']%>
         </div>
           </div>
       <%end%>
-        <div class="text-center show-more-event-wrapper col-md-3 offset-md-2">
-          <button type="button" class="btn btn-primary my-4 show-more-event-btn">Show more</button>
-        </div>
 
   </div>
 
@@ -162,8 +157,7 @@ location=<%=item['event_desc']%>
       });
 
       ost.events.init({
-        'eventsList': <%= raw events.to_json %>,
-        'startIndex': <%= startIndex %>
+        'eventsList': <%= raw events.to_json %>
       });
 
     });
