--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -6,8 +6,8 @@
           <h2>Scalable Technology</h2>
           <p>OST is designed for Internet-grade transaction volumes and speeds. OST leads development of the OpenST Protocol for launching Branded Token economies for mainstream businesses, and OpenST Mosiac a scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at low cost.</p>
           <div class="my-4">
-            <a href="https://github.com/OpenSTFoundation" class="btn btn-primary my-2 my-md-3" title="GITHUB FOUNDATION">GITHUB FOUNDATION</a>
-            <a href="" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="OPEN ST FORUM">OPEN ST FORUM</a>
+            <a href="https://github.com/OpenSTFoundation" class="btn btn-primary my-2 my-md-3" title="GITHUB FOUNDATION" target="_blank">GITHUB FOUNDATION</a>
+            <a href="https://discuss.openst.org/" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="OPEN ST FORUM" target="_blank">OPEN ST FORUM</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3 mx-auto d-none d-md-block">
@@ -34,7 +34,7 @@
               <p>The OpenST protocol enables the creation of Branded Tokens as stored value on auxilliary blockchains while the value of those tokens is backed by staked cryptoassets on Ethereum.</p>
             </div>
             <div>
-              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link">
+              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link" target="_blank" title="WHITE PAPER">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#white-paper-blockchain-infrastructure"></use>
@@ -42,7 +42,7 @@
                 </svg>
                 <span>WHITE PAPER</span>
               </a>
-              <a href="https://github.com/OpenSTFoundation" class="github-link ml-3">
+              <a href="https://github.com/OpenSTFoundation" class="github-link ml-3" target="_blank" title="GITHUB">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
@@ -67,7 +67,7 @@
               <p style="flex: 1 1 auto;">OpenST Mosaic introduces metablockchains to enable Internet-grade transaction throughput on Ethereum. Your transactions run at lightning speed on auxilliary blockchains with economic finality secured asynchronously on Ethereum.</p>
             </div>
             <div>
-              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link">
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link" target="_blank" title="WHITE PAPER">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#white-paper-blockchain-infrastructure"></use>
@@ -75,7 +75,7 @@
                 </svg>
                 <span>WHITE PAPER</span>
               </a>
-              <a href="" class="github-link ml-3">
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts" class="github-link ml-3" target="_blank" title="GITHUB">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
