--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -6,13 +6,13 @@
 <!--          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>-->
 <!--        </switch>-->
 <!--      </svg>-->
-      <h3>TOOLKITS & APIs</h3>
+      <h2 class="mb-4">TOOLKITS & APIs</h2>
       <p>
         OST KIT provides all the tools needed to run your blockchain-powered economy. Use our robust RESTful APIs and SDKs to integrate advanced blockchain functionality with ease while observing the highest security standards. Our user firendly dashboards help you manage and optimize your Branded Token economies.
       </p>
       <div class="mt-4 text-center text-md-left">
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary" title="Discover Ost Kit">Discover Ost Kit</a>
-        <a href="" class="btn btn-secondary mt-3 mt-xl-0 ml-xl-3" title="Check Our API's">Check Our API's</a>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary" title="Discover Ost Kit" target="_blank">Discover Ost Kit</a>
+        <a href="https://dev.ost.com/" class="btn btn-secondary mt-3 mt-xl-0 ml-xl-3" title="Check Our API's" target="_blank">Check Our API's</a>
       </div>
     </div>
     <div class="col col-lg-6 col-xl-6 p-md-0 d-none d-md-block">
@@ -41,7 +41,7 @@
               <p class="my-2">OST KIT provdes RESTful APIs and SDKs to help you easily setup and integrate your token economy into your existing app, enabling you to test with minimal effort from your developers.</p>
             </div>
             <div>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" class="text-link" target="_blank" title="Read More">Read More</a>
+              <a href="https://dev.ost.com/" class="text-link" target="_blank" title="Read More">Read More</a>
             </div>
           </div>
         </div>
@@ -59,7 +59,7 @@
               <p class="my-2">OST makes it easy to design and test your blockchain-enabled app with documentation and sample code for Ruby, JavaScript, PHP, and Java. Framework code for OST Wallet and third-party payment processors streamlines the process for developers.</p>
             </div>
             <div>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" class="text-link" target="_blank" title="Read More">Read More</a>
+              <a href="https://dev.ost.com/docs/sdks_overview.html" class="text-link" target="_blank" title="Read More">Read More</a>
             </div>
           </div>
         </div>
