--- a/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
@@ -8,11 +8,7 @@
         </div>
         <div class="col-12 img-container container ">
           <div class="row">
-
-            <div class="col-5 pr-0">
-              <button class="btn btn-primary mt-3" title="read more"> read more </button>
-            </div>
-            <div class="col-7 pr-0 img-position ">
+            <div class="col-7 pr-0 img-position ml-auto">
               <img class="img-fluid responsively-lazy"
                    src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-liquidity-branded-token-exchange-mobile@2x.png"
                    alt="OST - Liquidity Branded Token"
@@ -21,14 +17,8 @@
                 />
             </div>
           </div>
-
-
         </div>
       </div>
     </div>
-
-
   </div>
-
-
 </section>
