--- a/app/views/web/ost/index/_jumbotron_mobile.erb
+++ b/app/views/web/ost/index/_jumbotron_mobile.erb
@@ -32,16 +32,16 @@
           </div>
           <div class="col-5 text-center mt-3 mt-md-0 pr-0">
             <div class="illustration w-100">
-              <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="<%= ost_home_page_jumbotron[0]['jumbotron_video_link'] %>">
-                <div class="play align-middle ">
-                  <svg class="svg">
-                    <switch>
-                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
-                    </switch>
-                  </svg>
-                </div>
-                <span class="align-middle"></span>
-              </div>
+<!--              <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="<%#= ost_home_page_jumbotron[0]['jumbotron_video_link'] %>">-->
+<!--                <div class="play align-middle ">-->
+<!--                  <svg class="svg">-->
+<!--                    <switch>-->
+<!--                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>-->
+<!--                    </switch>-->
+<!--                  </svg>-->
+<!--                </div>-->
+<!--                <span class="align-middle"></span>-->
+<!--              </div>-->
               <img src="<%= ost_home_page_jumbotron[0]['jumbotron_image_mobile'] %>" srcset="<%= ost_home_page_jumbotron[0]['jumbotron_image_mobile'] %> 1100w" class="img-fluid position-relative pr-0 w-100" alt="Simple Token Play Video"/>
             </div>
           </div>
