--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -12,7 +12,7 @@
       </p>
       <div class="mt-4 text-center text-md-left">
         <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary" title="Discover Ost Kit" target="_blank">Discover Ost Kit</a>
-        <a href="https://dev.ost.com/" class="btn btn-secondary mt-3 mt-xl-0 ml-xl-3" title="Check Our API's" target="_blank">Check Our API's</a>
+        <a href="https://dev.ost.com/" class="btn btn-secondary mt-3 mt-xl-0 ml-xl-3 d-none d-md-inline-block" title="Check Our API's" target="_blank">Check Our API's</a>
       </div>
     </div>
     <div class="col col-lg-6 col-xl-6 p-md-0 d-none d-md-block">
