change background color of team grid section

--- a/app/views/web/ost/index/_ost_team.erb
+++ b/app/views/web/ost/index/_ost_team.erb
@@ -9,7 +9,7 @@
           <div class="row">
             <div class="col-12 col-sm-6 col-md-12 mr-auto">
               <h3>On a mission to bring blockchain to the mainstream</h3>
-              <p class="text-left">Blockchain technology holds enormous potential to transform business and improve society. A community-driven project, OST relies upon partner feedback as the engine that will drive progress forward. We invite you to connect with us, become a link in our chain, and help us unlock the power of blockchain for all.</p>
+              <p class="text-left pt-2">Blockchain technology holds enormous potential to transform business and improve society. A community-driven project, OST relies upon partner feedback as the engine that will drive progress forward. We invite you to connect with us, become a link in our chain, and help us unlock the power of blockchain for all.</p>
               <a href="<%= GlobalConstant::Base.root_url %>team" class="btn btn-primary my-2" title="Meet The team">Meet The team</a>
               <a href="<%= GlobalConstant::Base.root_url %>careers" class="btn btn-secondary my-2 ml-lg-3" title="Work with Us">Work with Us</a>
             </div>
