--- a/app/assets/stylesheets/web/ost/index/OstTeam.scss
+++ b/app/assets/stylesheets/web/ost/index/OstTeam.scss
@@ -1,10 +1,13 @@
+// Import theme variables
+@import "../../ost_theme/variables";
+
 .container-ost-team{
-  background-image: linear-gradient(to bottom, #ffffff, #f4f8f9);
-  h1{
-    color: #438cad;
+  background-color: $blue-900;
+  h3{
+    color: $white;
   }
   p{
-    color: #597a84;
+    color: $white;
     font-weight: 300;
     line-height: 1.8;
   }
