--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-subscribe pt-5" id="subscribe">
+<section class="container-fluid container-subscribe py-5" id="subscribe">
   <div class="row text-center">
     <div class="container col-12 col-sm-9 col-lg-8 col-xl-6 mx-auto">
       <div class="row">
