change background color of team grid section- sec btn changes

--- a/app/assets/stylesheets/web/ost/index/OstTeam.scss
+++ b/app/assets/stylesheets/web/ost/index/OstTeam.scss
@@ -11,6 +11,16 @@
     font-weight: 300;
     line-height: 1.8;
   }
+  .ost-team-sec-btn {
+    border: 1.5px solid #fff !important;
+    color: #fff !important;
+    background-color: #34445b !important;
+    &:hover {
+      border: 1.5px solid $white !important;
+      color: $blue-900 !important;
+      background-color: $white !important;
+    }
+  }
 
   .grid {
     background: #DDD;
