--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial => "/web/ost/index/uber_banner" %>
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/index/jumbotron" %>
 <%= render :partial => "/web/ost/index/jumbotron_mobile" %>
