--- a/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
@@ -1,10 +1,10 @@
-<section class="container-fluid liquidity-container-wrapper  d-md-none">
+<section class="container-fluid liquidity-container-wrapper d-md-none">
   <div class="row back-angled-edge">
     <div class="container">
       <div class="row text-content py-5 ">
         <div class="col-12">
           <h3 class="white-header">Liquidity Branded Token Exchange</h3>
-          <p class="mt-4 pr-3">OST's Branded Token Exchange, BTEX, will let your customers swap the Branded Tokens you create for other forms of value. OST is currently securing licenses worldwide for BTEX.</p>
+          <p class="mt-4 pr-3">OST's Branded Token Exchange, BTEX, will let your customers swap the Branded Tokens you create for other forms of value. OST is working towards securing licenses worldwide for BTEX on behalf of our clients.</p>
         </div>
         <div class="col-12 img-container container ">
           <div class="row">
