--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-12 d-block d-lg-none text-center">
           <h2 class="header-blue-900">OST PARTNERS</h2>
-          <p>Billions of in-app transactions connecting<br/> hundreds of millions of users</p>
+          <p>Billions of in-app transactions connecting<br/> hundreds of millions of users.</p>
           <div class="play-video" id="partner-video-mobile">
             <div class="video-image">
               <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png 1000w" class="img-fluid" alt="OST - Design Your Token" title="" />
@@ -24,7 +24,7 @@
         <div class="col-md-12 col-lg-6 text-center text-lg-left">
           <div class="d-none d-lg-block">
             <h2 class="header-blue-900">OST PARTNERS</h2>
-            <p>Billions of in-app transactions connecting<br/> hundreds of millions of users</p>
+            <p>Billions of in-app transactions connecting<br/> hundreds of millions of users.</p>
           </div>
           <div class="row partners-companies mt-3">
             <div class="col-6 col-md-4 col-xl-3 my-3">
@@ -52,8 +52,9 @@
               <span class="partners-floship-icon"></span>
             </div>
           </div>
-          <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST Partners">MEET OST PARTNERS</a>
-          <a href="/challenges-2" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3 d-none d-md-inline-block" title="VIEW INTEGRATIONS">VIEW INTEGRATIONS</a>
+<!--          <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST Partners">MEET OST PARTNERS</a>-->
+          <a href="/challenges-2" class="btn btn-primary my-2 my-md-3" title="VIEW INTEGRATIONS">VIEW INTEGRATIONS</a>
+<!--          <a href="/challenges-2" class="btn btn-secondary my-2 ml-sm-3 ml-lg-0 ml-xl-3 d-none d-md-inline-block" title="VIEW INTEGRATIONS">VIEW INTEGRATIONS</a>-->
         </div>
         <div class="col-12 col-md-6 col-lg-6 d-none d-lg-block mt-3">
           <div class="play-video" id="partner-video">
