--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-12">
-          <h1 class="title mt-4">Where to Buy the <span>$OST</span> Token</h1>
+          <h1 class="title mt-4">Where to Buy the <span>OST</span> Token</h1>
           <p class="my-4 col-lg-10 mx-auto">The OST token is a cryptocurrency that can be used for staking when minting Branded Tokens within the OpenST protocol. It is also a payment method in OST solutions. The OST token can be purchased only through third-party exchanges.</p>
           <div class="row">
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
