--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -7,12 +7,10 @@
 <!--        </switch>-->
 <!--      </svg>-->
       <h2 class="mb-4">TOOLKITS & APIs</h2>
-      <p>
-        OST KIT provides all the tools needed to run your blockchain-powered economy. Use our robust RESTful APIs and SDKs to integrate advanced blockchain functionality with ease while observing the highest security standards. Our user firendly dashboards help you manage and optimize your Branded Token economies.
-      </p>
+      <p>OST KIT provides all the tools needed to run your Branded Token economy. Use our robust RESTful APIs and SDKs to integrate advanced blockchain functionality with ease while observing the highest security standards. Our user friendly dashboards help you manage, automate, and optimize your economy.</p>
       <div class="mt-4 text-center text-md-left">
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary" title="Discover Ost Kit" target="_blank">Discover Ost Kit</a>
-        <a href="https://dev.ost.com/" class="btn btn-secondary mt-3 mt-xl-0 ml-xl-3 d-none d-md-inline-block" title="Check Our API's" target="_blank">Check Our API's</a>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary" title="DISCOVER OST KIT" target="_blank">DISCOVER OST KIT</a>
+        <a href="https://dev.ost.com/" class="btn btn-secondary mt-3 mt-xl-0 ml-xl-3 d-none d-md-inline-block" title="DEV RESOURCES" target="_blank">DEV RESOURCES</a>
       </div>
     </div>
     <div class="col col-lg-6 col-xl-6 p-md-0 d-none d-md-block">
@@ -38,7 +36,7 @@
                 </svg>
                 <h5 class="d-inline-block ml-1 mb-0">APIs & SDKs</h5>
               </div>
-              <p class="my-2">OST KIT provdes RESTful APIs and SDKs to help you easily setup and integrate your token economy into your existing app, enabling you to test with minimal effort from your developers.</p>
+              <p class="my-2">OST KIT provides RESTful APIs and SDKs to help you easily setup and integrate your token economy into your existing app, enabling you to integrate & test Branded Tokens with minimal effort.</p>
             </div>
             <div>
               <a href="https://dev.ost.com/" class="text-link" target="_blank" title="Read More">Read More</a>
@@ -56,7 +54,7 @@
                 </svg>
                 <h5 class="d-inline-block ml-1 mb-0">DEV RESOURCES</h5>
               </div>
-              <p class="my-2">OST makes it easy to design and test your blockchain-enabled app with documentation and sample code for Ruby, JavaScript, PHP, and Java. Framework code for OST Wallet and third-party payment processors streamlines the process for developers.</p>
+              <p class="my-2">OST makes it easy to design and test your blockchain-enabled app with documentation and sample code for Ruby, JavaScript, PHP, and Java, as well as framework code for wallets and third-party payment processors.</p>
             </div>
             <div>
               <a href="https://dev.ost.com/docs/sdks_overview.html" class="text-link" target="_blank" title="Read More">Read More</a>
