--- a/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row text-content py-5 ">
         <div class="col-12">
-          <h3 class="white-header">Liquidity Branded Token Exchange</h3>
+          <h3 class="white-header">Branded Liquidity Platform</h3>
           <p class="mt-4 pr-3">OST's Branded Token Exchange, BTEX, will let your customers swap the Branded Tokens you create for other forms of value. OST is working towards securing licenses worldwide for BTEX on behalf of our clients.</p>
         </div>
         <div class="col-12 img-container container ">
