--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -3,8 +3,8 @@
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
       <div class="row">
         <div class="col-12 d-block d-lg-none text-center">
-          <h2 class="header-blue-900">OST PARTNERS</h2>
-          <p>Billions of in-app transactions connecting<br/> hundreds of millions of users.</p>
+          <h2 class="header-blue-900">OST Partners</h2>
+          <p>Billions of in-app transactions connecting hundreds of millions of users</p>
           <div class="play-video" id="partner-video-mobile">
             <div class="video-image">
               <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/lgbt@2x.png 1000w" class="img-fluid" alt="OST - Design Your Token" title="" />
@@ -23,8 +23,8 @@
         </div>
         <div class="col-md-12 col-lg-6 text-center text-lg-left">
           <div class="d-none d-lg-block">
-            <h2 class="header-blue-900">OST PARTNERS</h2>
-            <p>Billions of in-app transactions connecting<br/> hundreds of millions of users.</p>
+            <h2 class="header-blue-900">OST Partners</h2>
+            <p>Billions of in-app transactions connecting <br/> hundreds of millions of users</p>
           </div>
           <div class="row partners-companies mt-3">
             <div class="col-6 col-md-4 col-xl-3 my-3">
