Fix for roadmap page scrolling for mobile device

--- a/app/views/web/ost/roadmap/_mobile.erb
+++ b/app/views/web/ost/roadmap/_mobile.erb
@@ -1,6 +1,6 @@
 <div class="container roadmap-container d-md-none">
 
-  <div class="row">
+  <div class="row mobile-jumbo">
     <div class="col-12 text-center my-5">
       <h3 class="header mb-3">ROADMAP</h3>
       <p class="desc">Blockchain Infrastructure <br/>to Empower New Economies</p>
